--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+/* loading screen*/
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+.animate-spin {
+  animation: spin 1s linear infinite;
+}
 
 
 .poppins{
@@ -153,7 +162,7 @@ border-radius: 30px;
  @media(max-width:1200px) {
   .logins{
     width: 100%;
-    height: 106vh;
+    height: 116vh;
     position: relative;
     /* w-full h/-screen */
   }
@@ -181,6 +190,17 @@ border-radius: 30px;
     /* position: relative; */
    }
  }
+ @media(max-width:1100px) {
+  .hides{
+    display: none;
+ }
+ .logins{
+  width: 100%;
+  height: 116vh;
+  position: relative;
+  /* w-full h/-screen */
+}
+ }
 @media(max-width:750px) {
   
   .subLogins{
@@ -191,9 +211,7 @@ border-radius: 30px;
     margin-left: 50px;
     padding-top: 20px;
    }
-   .hides{
-     display: none;
-  }
+  
   .logins{
     width: 100%;
     height: 106vh;
