--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,8 +29,11 @@
  /* login */
 .logins{
   width: 100%;
-  height: 130vh;
+  height: 100vh;
   position: relative;
+  background-image: url('../../public/assest/images/dashboardBG.png');
+  background-size: cover;
+  background-position: center;
  }
 .subLogins{
   padding-left: 110px;
