--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,7 +29,7 @@
  /* login */
 .logins{
   width: 100%;
-  height: 100vh;
+  height: 100%;
   position: relative;
   background-image: url('../../public/assest/images/dashboardBG.png');
   background-size: cover;
